# axum-project

./: Cargo.toml
crates/axumapp01_helloworld/: Cargo.toml
crates/axumapp01_helloworld/src/: main.rs
crates/axumapp02_staticfile/: Cargo.toml
crates/axumapp02_staticfile/src/: main.rs
crates/axumapp03_addlog/: Cargo.toml
crates/axumapp03_addlog/src/: main.rs
crates/axumapp04_query/: Cargo.toml
crates/axumapp04_query/src/: main.rs
crates/axumapp05_form/: Cargo.toml
crates/axumapp05_form/src/: main.rs
crates/axumapp06_jsoninput/: Cargo.toml
crates/axumapp06_jsoninput/src/: main.rs
crates/axumapp07_jsonres/: Cargo.toml
crates/axumapp07_jsonres/src/: main.rs
crates/axumapp09_template/: Cargo.toml
crates/axumapp09_template/src/: main.rs
crates/axumapp09_template/templates/: hello.html
crates/axumapp10_db/: Cargo.toml
crates/axumapp10_db/src/: main.rs
crates/axumapp11_todo/: Cargo.toml
crates/axumapp11_todo/src/: main.rs
